// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Psammead Styles - Fonts should match MALLANNA REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"Mallanna\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Mallanna/v1.0.4/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Mallanna/v1.0.4/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Mallanna/v1.0.4/normal.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match MALLANNA REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Mallanna\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SANS ETHIOPIC BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SANS ETHIOPIC BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SANS ETHIOPIC REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansEthiopic/v1.901/normal.ttf') format('ttf');
    font-display: swap;
  }
  "
`;

exports[`Psammead Styles - Fonts should match NOTO SANS ETHIOPIC REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Ethiopic\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }
  "
`;

exports[`Psammead Styles - Fonts should match NOTO SANS TAMIL BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Tamil\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/bold.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SANS TAMIL BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Tamil\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff2') format('woff2'), url('https://example.com/bold.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SANS TAMIL REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Tamil\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/normal.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSansTamil/v1.00/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`Psammead Styles - Fonts should match NOTO SANS TAMIL REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Sans Tamil\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff2') format('woff2'), url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF BENGALI BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Bengali\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/bold.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF BENGALI BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Bengali\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff2') format('woff2'), url('https://example.com/bold.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: optional;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF BENGALI REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Bengali\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/normal.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifBengali/v1.00/normal.ttf') format('ttf');
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF BENGALI REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Bengali\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff2') format('woff2'), url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF SINHALA BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Sinhala\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/bold.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF SINHALA BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Sinhala\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff2') format('woff2'), url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF SINHALA REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Sinhala\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/normal.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/NotoSerifSinhala/v1.00/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`Psammead Styles - Fonts should match NOTO SERIF SINHALA REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Noto Serif Sinhala\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff2') format('woff2'), url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`Psammead Styles - Fonts should match PADAUK BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/bold.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/bold.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match PADAUK BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff') format('woff'), url('https://example.com/bold.eot') format('eot'), url('https://example.com/bold.ttf') format('ttf');
    font-display: swap;
  }
"
`;

exports[`Psammead Styles - Fonts should match PADAUK REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/normal.woff') format('woff'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/normal.eot') format('eot'), url('https://ws-downloads.files.bbci.co.uk/fonts/Padauk/v2.8/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`Psammead Styles - Fonts should match PADAUK REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"Padauk\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff') format('woff'), url('https://example.com/normal.eot') format('eot'), url('https://example.com/normal.ttf') format('ttf');
    font-display: swap;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH QALAM BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"BBC Reith Qalam\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/ReithQalam/v1.100/bold.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/ReithQalam/v1.100/bold.woff') format('woff');
    font-display: optional;
  }
"
`;

exports[`Psammead Styles - Fonts should match REITH QALAM BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"BBC Reith Qalam\\";
    font-weight: 700;
    font-style: normal;
    src: url('https://example.com/bold.woff2') format('woff2'), url('https://example.com/bold.woff') format('woff');
    font-display: optional;
  }
"
`;

exports[`Psammead Styles - Fonts should match REITH QALAM REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"BBC Reith Qalam\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://ws-downloads.files.bbci.co.uk/fonts/ReithQalam/v1.100/normal.woff2') format('woff2'), url('https://ws-downloads.files.bbci.co.uk/fonts/ReithQalam/v1.100/normal.woff') format('woff');
    font-display: optional;
  }
"
`;

exports[`Psammead Styles - Fonts should match REITH QALAM REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"BBC Reith Qalam\\";
    font-weight: 400;
    font-style: normal;
    src: url('https://example.com/normal.woff2') format('woff2'), url('https://example.com/normal.woff') format('woff');
    font-display: optional;
  }
"
`;

exports[`Psammead Styles - Fonts should match REITH SANS BOLD ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS BOLD ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS CONDENSED BOLD base font url 1`] = `
"
  @font-face {
      font-family: \\"ReithSansCondensed\\";
      font-weight: 700;
      src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Bd.woff\\") format(\\"woff\\");
      font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS CONDENSED BOLD with overridden url 1`] = `
"
  @font-face {
      font-family: \\"ReithSansCondensed\\";
      font-weight: 700;
      src: url(\\"https://example.com/BBCReithSansCd_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSansCd_W_Bd.woff\\") format(\\"woff\\");
      font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS CONDENSED REGULAR base font url 1`] = `
"
  @font-face {
      font-family: \\"ReithSansCondensed\\";
      src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSansCd_W_Rg.woff\\") format(\\"woff\\");
      font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS CONDENSED REGULAR with overridden url 1`] = `
"
  @font-face {
      font-family: \\"ReithSansCondensed\\";
      src: url(\\"https://example.com/BBCReithSansCd_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSansCd_W_Rg.woff\\") format(\\"woff\\");
      font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS EXTRA BOLD ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS EXTRA BOLD ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS EXTRA BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS EXTRA BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS ITALIC base font url 1`] = `
"
    @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS ITALIC with overridden url 1`] = `
"
    @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS LIGHT ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS LIGHT ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS LIGHT base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS LIGHT with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS MEDIUM ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS MEDIUM ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS MEDIUM base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS MEDIUM with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSans_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SANS REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSans\\";
    src: url(\\"https://example.com/BBCReithSans_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSans_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF BOLD ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF BOLD ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_BdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_BdIt.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Bd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Bd.woff\\") format(\\"woff\\");
    font-weight: 700;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF EXTRA BOLD ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF EXTRA BOLD ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_ExBdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_ExBdIt.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF EXTRA BOLD base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF EXTRA BOLD with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_ExBd.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_ExBd.woff\\") format(\\"woff\\");
    font-weight: 800;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_It.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_It.woff\\") format(\\"woff\\");
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF LIGHT ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF LIGHT ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_LtIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_LtIt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF LIGHT base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF LIGHT with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Lt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Lt.woff\\") format(\\"woff\\");
    font-weight: 300;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF MEDIUM ITALIC base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF MEDIUM ITALIC with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_MdIt.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_MdIt.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-style: italic;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF MEDIUM base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF MEDIUM with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Md.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Md.woff\\") format(\\"woff\\");
    font-weight: 500;
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF REGULAR base font url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://gel.files.bbci.co.uk/r2.511/BBCReithSerif_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;

exports[`Psammead Styles - Fonts should match REITH SERIF REGULAR with overridden url 1`] = `
"
  @font-face {
    font-family: \\"ReithSerif\\";
    src: url(\\"https://example.com/BBCReithSerif_W_Rg.woff2\\") format(\\"woff2\\"), url(\\"https://example.com/BBCReithSerif_W_Rg.woff\\") format(\\"woff\\");
    font-display: optional;
  }"
`;
